fix: z-index on bar

--- a/src/components/ProfileBar/ProfileBar.module.css
+++ b/src/components/ProfileBar/ProfileBar.module.css
@@ -3,6 +3,8 @@ header {
 	top: 0;
 	left: 0;
 
+	z-index: 100;
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
